test/invalid/fc36956_MethodOverrideButSuperClassDoesNotExist/ToalhaDeMesa.plume
/**
 * ToalhaDeMesa.plume
 *
 * Test: there is a method qualified as override
 * but the super class doesn't exist
 *
 * @author Carlos Mao de Ferro
 * @version $Id: ToalhaDeMesa.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ToalhaDeMesa extends Toalha is

	method temNodoas : (estaSuja : Boolean) -> Boolean is
		if estaSuja
		then true
		else false